--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <noscript>You need to enable JavaScript to run this app teste.</noscript>
   <div id="root"></div>
 
   <!-- JQuery -->
